updated auth, recipes, and recipes_utils
works with new DB
search works
